adding LWC tests to flow

--- a/force-app/main/default/lwc/richText/richText.html
+++ b/force-app/main/default/lwc/richText/richText.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-input-rich-text
-        value={myVal}>
+        value={userInput}>
     </lightning-input-rich-text>
 </template>
